trying to fix homepage spacing

--- a/style.css
+++ b/style.css
@@ -64,9 +64,6 @@ figcaption{
   padding: 0px;
 }
 
-h4{
-  padding: 0px;
-}
 /* this is end of homepage only*/
 
 
@@ -101,6 +98,7 @@ h1 a:visited{
 h4{
   font-size: 25px;
   font-weight: bold;
+  padding: 0px;
 }
 /* this is end of maps only*/
 
